# OpenWorld-AI-Image-Detection

./: .gitignore  AGENTS.md  CITATION.cff  DATASETS.md  IMPLEMENTATION_CHECKLIST.md  Makefile  PLANS.md  README.md  agents.md  context.md  job.sh  job_baseline_mix_aug.sh  job_baseline_mix_aug_dat.sh  job_dire_mix_aug.sh  job_dire_mix_aug_dat.sh  job_post_train_eval_all.sh  job_sgf_mix_aug.sh  job_sgf_mix_aug_dat.sh  pyproject.toml  requirements.txt
configs/: AGENTS.md  README.md  agents.md  baseline_clip.yaml  baseline_mix_aug.yaml  baseline_mix_aug_dat.yaml  calibration.yaml  dire_fusion.yaml  dire_mix_aug.yaml  dire_mix_aug_dat.yaml  eval_aiart.yaml  eval_aiart_test.yaml  eval_aria.yaml  eval_cifake.yaml  eval_commfor.yaml  eval_diffusiondb.yaml  eval_raid.yaml  eval_vct2.yaml  sgf_mix_aug.yaml  sgf_mix_aug_dat.yaml  sgf_net.yaml
demo/: AGENTS.md  agents.md  app.py
notebooks/: 01_data_exploration.ipynb  02_train_baseline.ipynb  03_calibration_and_abstention.ipynb  04_open_world_evals.ipynb  AGENTS.md  agents.md
reports/: README.md  paper.md  paper_outline.md  results_summary_template.md  round2_mix_dat_plan.md  round2_mix_dat_results.md
scripts/: AGENTS.md  _bootstrap.py  _common.py  agents.md  build_conformal.py  cache_residuals.py  calibrate_temperature.py  create_aiart_split.py  ensemble_abstention.py  eval_aria.py  eval_commfor.py  eval_raid.py  eval_vct2.py  evaluate.py  generate_summary.py  make_plots.py  predict_image.py  train_baseline.py  train_sgf.py  train_with_dire.py
tests/: AGENTS.md  agents.md  test_conformal.py  test_metrics.py  (+1 more)
(+63 files in other folders)
